clean the trash, add QuoteUpdateView()

--- a/dw_root/quotes/templates/quotes/quote.html
+++ b/dw_root/quotes/templates/quotes/quote.html
@@ -9,7 +9,7 @@
 {% endblock sidenav %}
 
 {% block content %}
-<h1>Quote Request</h1>
+<h1>Создание новой записи.</h1>
 
 {% if submitted %}
     <p class="success">
