--- a/dw_root/dw_site/templates/base.html
+++ b/dw_root/dw_site/templates/base.html
@@ -8,6 +8,7 @@
             Untitled Document
         {% endblock title %}
     </title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="{% static 'main.css' %}" rel="stylesheet" type="text/css">
 </head>
 <body>
@@ -36,7 +37,7 @@
                     {% endblock sidenav %}
                     <li><a href="/contact">Contact Us</a></li>
                     <li><a href="/quote/">Новая ЭП</a></li>
-                    <li><a href="/quote/show">Список ЭП</a></li>
+                    <li><a href="/quote/detail">Список ЭП</a></li>
                 </ul>
             </nav>
         </aside>
@@ -49,4 +50,8 @@
         <footer id="footer">Copyright &copy; 2019 Meandco Web Design</footer>
     </div>
 </body>
+
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
 </html>
