--- a/dw_root/quotes/templates/quotes/quote_delete.html
+++ b/dw_root/quotes/templates/quotes/quote_delete.html
@@ -3,14 +3,20 @@
 {% block title %}Delete Quote{% endblock title %}
 
 {% block content %}
-<div class="main">
-    <!-- Create a Form -->
-    <form method="POST">
-        <!-- Security token by Django -->
-        {% csrf_token %}
-        Are you want to delete this item ?
-        <input type="submit" value="Yes"/>
-        <a href="/">Cancel</a>
-    </form>
+<br>
+<div class="row">
+	<div class="col-md-6">
+		<div class="card card-body">
+
+            <p>Are you want to delete this item ?</p>
+            <form method="POST">
+                <!-- Security token by Django -->
+                {% csrf_token %}
+
+                <input class="btn btn-danger" type="submit" value="Yes"/>
+                <a class="btn btn-warning" href="/">Cancel</a>
+            </form>
+        </div>
+    </div>
 </div>
 {% endblock content %}
