--- a/dw_root/quotes/templates/quotes/quote_detail.html
+++ b/dw_root/quotes/templates/quotes/quote_detail.html
@@ -17,8 +17,15 @@
     <tr><td>Submit Date:</td><td>{{ quote.submitted|date:"m-d-y" }}</td></tr>
     <tr><td>Quote Date:</td><td>{{ quote.quotedate|date:"m-d-y"|default:"pending" }}</td></tr>
     <tr><td>Quote Price:</td><td>{{ quote.quoteprice|default:"--" }}</td></tr>
-    <tr><td>FILE:</td><td><a href="{{ quote.jobfile.url }}">FILE</a></td></tr>
+    {% if quote.jobfile %}
+        <tr><td>FILE:</td><td><a href="{{ quote.jobfile.url }}">FILE</a></td></tr>
+    {% endif %}
 </table>
 
-<p><a href="../show">Back to quote list</a> <a href="{% url "quote_delete" quote.id %}">Delete</a>
+
+<p>
+<a class="btn btn-outline-primary" href="../detail">Назад к списку</a>
+<a class="btn btn-outline-primary" href="{% url "quote_delete" quote.id %}">Удалить</a>
+<a class="btn btn-outline-primary" href="{% url "quote_update" quote.id %}">Изменить</a>
+</p>
 {% endblock content %}
