some style changes

--- a/dw_root/quotes/templates/quotes/quote.html
+++ b/dw_root/quotes/templates/quotes/quote.html
@@ -4,7 +4,7 @@
 
 
 {% block content %}
-<h1>Создание новой записи.</h1>
+<h1>Создание новой записи</h1>
 
 {% if submitted %}
     <p class="success">
