--- a/dw_root/quotes/templates/quotes/quote_list.html
+++ b/dw_root/quotes/templates/quotes/quote_list.html
@@ -1,9 +1,9 @@
 {% extends 'quotes/quote.html' %}
 
-{% block title %}All Quotes{% endblock title %}
+{% block title %}Список подписей{% endblock title %}
 
 {% block content %}
-<h1>All Quotes</h1>
+<h1>Список подписей</h1>
 
 <table style="border-collapse: collapse;">
     <tr class="quotehdr"><th>ID</th><th>Client Name</th>
@@ -21,4 +21,6 @@
         </tr>
     {% endfor %}
 </table>
+
+
 {% endblock content %}
