--- a/dw_root/dw_site/static/main.css
+++ b/dw_root/dw_site/static/main.css
@@ -2,7 +2,7 @@
 
 #header {
     border-style: none;
-    width: 800px;
+    width: auto;
     height: auto;
 }
 #wrapper {
@@ -10,7 +10,7 @@
     margin-left: auto;
     margin-right: auto;
     background-color: #FFFFFF;
-    width: 800px;
+    width: auto;
 }
 body {
     background-color: #E0E0E0;
@@ -59,6 +59,7 @@ body {
 #logo {
     padding: 10px;
 }
+
 
 ul.errorlist {
     margin: 0;
