--- a/dw_root/dw_site/templates/base.html
+++ b/dw_root/dw_site/templates/base.html
@@ -5,49 +5,27 @@
     <meta charset="utf-8">
     <title>
         {% block title %}
-            Untitled Document
+            Главная
         {% endblock title %}
     </title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="{% static 'main.css' %}" rel="stylesheet" type="text/css">
 </head>
 <body>
+
+    {% include 'navbar.html' %}
+
     <div id="wrapper">
         <header id="header">
-            <div id="logo"><a href="/"><img src="{% static 'logo.png' %}" 
-                alt=""/></a>
-                <span style="float: right;">
-                    {% if user.is_authenticated %}
-                      Hello, {{ user.username }}. <a href="{% url 'logout' %}?next=/">Log out</a>.
-                    {% else %}
-                      Not logged in. <a href="{% url 'login' %}">Log in</a>.
-                    {% endif %}
-                </span>
-            </div>
-            <div id="topbanner"><img src="{% static 'top_banner.jpg' %}"
-                width="800" height="200" alt=""/></div>
+            <div id="topbanner"><img src="{% static 'top_banner.jpg' %}"/></div>
         </header>
-        <aside id="leftsidebar">
-            <nav id="nav">
-                <ul>
-                    {% block sidenav %}
-                    <li>Menu 1</li>
-                    <li>Menu 2</li>
-                    <li>Menu 3</li>
-                    {% endblock sidenav %}
-                    <li><a href="/contact">Contact Us</a></li>
-                    <li><a href="/quote/">Новая ЭП</a></li>
-                    <li><a href="/quote/detail">Список ЭП</a></li>
-                </ul>
-            </nav>
-        </aside>
         <section id="main">
             {% block content %}
-              <h1>Welcome!</h1>
+              <h1>Добро пожаловать!</h1>
               <p>This is the site template</p>
             {% endblock content %}
         </section>
-        <footer id="footer">Copyright &copy; 2019 Meandco Web Design</footer>
+        <footer id="footer">Copyright &copy; 2021 <b>frolov</b></footer>
     </div>
 </body>
 
