--- a/dw_root/dw_site/templates/registration/login.html
+++ b/dw_root/dw_site/templates/registration/login.html
@@ -1,13 +1,13 @@
 {% extends "base.html" %}
 
-{% block title %}Quote Login{% endblock title %}
+{% block title %}Регистрация{% endblock title %}
 
 {% block sidenav %}
-    <li><a href="/">Home</a></li>
+    <li><a href="/">Главная</a></li>
 {% endblock sidenav %}
 
 {% block content %}
-<h1>Please Login</h1>
+<h1>Пожалуйста, выполните вход.</h1>
 <p>You must be logged in to submit or views quotes.</p>
 
 <form method="post" action="{% url 'login' %}">
@@ -18,7 +18,7 @@
         <td><input type="submit" value="login"></td>
     </tr>
 </table>
-<p>Not registered yet? <a href="{% url 'register'%}">Register here</a>.</p>
+<p>Not registered yet?<a href="{% url 'register'%}">Register here</a>.</p>
 <input type="hidden" name="next" value="{{ next }}" />
 {% csrf_token %}
 </form>
