--- a/dw_root/quotes/templates/quotes/quote_delete.html
+++ b/dw_root/quotes/templates/quotes/quote_delete.html
@@ -14,7 +14,7 @@
                 {% csrf_token %}
 
                 <input class="btn btn-danger" type="submit" value="Yes"/>
-                <a class="btn btn-warning" href="/">Cancel</a>
+                <a class="btn btn-warning" href="/detail">Cancel</a>
             </form>
         </div>
     </div>
