--- a/dw_root/quotes/templates/quotes/quote_update.html
+++ b/dw_root/quotes/templates/quotes/quote_update.html
@@ -2,19 +2,18 @@
 
 {% block title %}Изменение записи.{% endblock title %}
 
-
 {% block content %}
-<br>
-<div class="row">
-	<div class="col-md-6">
-		<div class="card card-body">
-            <form method="post">{% csrf_token %}
-                {{ form.as_p }}
-                <input type="submit" value="Update">
-            </form>
-        </div>
-    </div>
-</div>
+<br><h2>Редактирование записи</h2><br>
+<form method="post">
+    <table>
+        {{ form.as_table }}
+        <tr>
+            <td>&nbsp;</td>
+            <td><input type="submit" value="Обновить"></td>
+        </tr>
+    </table>
+    {% csrf_token %}
+</form>
 {% endblock content %}
 
 {% comment %} не работает загрузка файла через апдейт, если его удалить {% endcomment %}
