--- a/dw_root/dw_site/static/main.css
+++ b/dw_root/dw_site/static/main.css
@@ -1,6 +1,6 @@
 @charset "utf-8";
 
-#header {
+/* #header {
     border-style: none;
     width: auto;
     height: auto;
@@ -18,7 +18,7 @@ body {
     font-size: 0.9em; 
     text-align: justify; 
     color: #474747;
-}
+} */
 #footer {
     text-align: center;
     font-size: 0.8em;
@@ -30,7 +30,7 @@ body {
     clear: both;
     color: #969696;
 }
-#nav li {
+/* #nav li {
     padding-top: 10px;
     padding-bottom: 10px;
     font-size: 1em;
@@ -113,4 +113,4 @@ ul.errorlist {
 
 .quote td {
     padding: 5px 10px;
-}
+} */
