--- a/dw_root/quotes/templates/quotes/customer_detail.html
+++ b/dw_root/quotes/templates/quotes/customer_detail.html
@@ -3,11 +3,15 @@
 {% block title %}All Quotes{% endblock title %}
 
 {% block content %}
+<br>
 <h1>Quote Detail</h1>
 
-<table class="quote">
-    <tr><td>ID:</td><td>{{ quote.id }}</td></tr>
-    <tr><td>Name:</td><td>{{ quote.name }}</td></tr>
+<table class="table table-bordered" style="width: 20%">
+    <tr><td>ID:</td>
+        <td>{{ customer.id }}</td>
+    </tr>
+    <td>Фамилия:</td><td>{{ customer.last_name }}</td></tr>
+    <td>Name:</td><td>{{ customer.name }}</td></tr>
     <tr><td>Company:</td><td>{{ quote.company }}</td></tr>
     <tr><td>Email:</td><td>{{ quote.email }}</td></tr>
     <tr><td>Web Address:</td><td>{{ quote.web }}</td></tr>
@@ -23,8 +27,8 @@
 </table>
 
 <br><p>
-<a class="btn btn-outline-primary" href="../detail">Назад к списку</a>
-<a class="btn btn-outline-primary" href="{% url "quote_delete" quote.id %}">Удалить</a>
-<a class="btn btn-outline-primary" href="{% url "quote_update" quote.id %}">Изменить</a>
+<a class="btn btn-outline-primary" href="/detail">Назад к списку</a>
+<a class="btn btn-outline-primary" href="{% url "quote_delete" customer.id %}">Удалить</a>
+<a class="btn btn-outline-primary" href="{% url "quote_update" customer.id %}">Изменить</a>
 </p>
 {% endblock content %}
