--- a/dw_root/quotes/templates/quotes/customer_list.html
+++ b/dw_root/quotes/templates/quotes/customer_list.html
@@ -8,7 +8,7 @@
 <table class="table table-sm table-hover">
     <thead>
     <tr class="quotehdr">
-        <th>№</th>
+        <th>ID</th>
         <th>Фамилия</th>
         <th>Имя</th>
         <th>Должность</th>
@@ -39,6 +39,16 @@
     {% endfor %}
     </tbody>
 </table>
+
+{% comment %} Отображение активных подписей на страницу
+<table>
+{% for s in signs %}
+    <tr>
+        <td><a href="detail/{{ s.customer.id }}">{{ s }}</a></td>
+        <td>{{ s.end_date }}</td>
+    </tr>
+{% endfor %}
+</table>  {% endcomment %}
 
 
 {% endblock content %}
