--- a/dw_root/quotes/templates/quotes/customer_detail.html
+++ b/dw_root/quotes/templates/quotes/customer_detail.html
@@ -1,34 +1,78 @@
 {% extends 'quotes/quote.html' %}
 
-{% block title %}All Quotes{% endblock title %}
-
 {% block content %}
+
+	<br>
+
+<div class="row">
+	<div class="col-md">
+		<div class="card card-body">
+			<h5>Пользователь: {{ customer.last_name }} {{ customer.name }}</h5>
+			<hr>
+			<a class="btn btn-outline-info  btn-sm btn-block" href="">Редактировать</a>
+			<a class="btn btn-outline-info  btn-sm btn-block" href="{% url "sign_create"  %}">Добавить сертификат</a>
+
+		</div>
+	</div>
+
+	<div class="col-md">
+		<div class="card card-body">
+			<h5>Подробная информация</h5>
+			<hr>
+			<p><strong>Должность:</strong> {{ customer.position }}</p>
+			<p><strong>Подразделение:</strong> {{customer.department}}</p>
+			<p><strong>Структура:</strong> {{customer.get_iogv_display}}</p>
+			<p><strong>ИНН:</strong> {{customer.taxpayer_number|default:"--"}}</p>
+			<p><strong>СНИЛС:</strong> {{customer.snils_number|default:"--"}}</p>
+			<p><strong>Email:</strong> {{customer.email}}</p>
+			<p><strong>Адрес:</strong> {{customer.address|default:"--"}}</p>
+			<p><strong>Рабочий телефон:</strong> {{customer.work_phone|default:"--"}}</p>
+		</div>
+	</div>
+
+	<div class="col-md">
+		<div class="card card-body">
+			<h5>Всего было ЭП</h5>
+			<hr>
+			<h1 style="text-align: center;padding: 10px">{{order_count}}</h1>
+		</div>
+	</div>
+</div>
+
+
 <br>
-<h1>Quote Detail</h1>
+<div class="row">
+	<div class="col-md">
+		<div class="card card-body">
+			<table class="table table-sm">
+				<tr>
+					<th>ID</th>
+					<th>Кем выдана</th>
+					<th>Кому выдана</th>
+					<th>Дата выдачи</th>
+					<th>Дата окончания</th>
+					<th>Статус</th>
+					<th>Изменить</th>
+					<th>Удалить</th>
 
-<table class="table table-bordered" style="width: 20%">
-    <tr><td>ID:</td>
-        <td>{{ customer.id }}</td>
-    </tr>
-    <td>Фамилия:</td><td>{{ customer.last_name }}</td></tr>
-    <td>Name:</td><td>{{ customer.name }}</td></tr>
-    <tr><td>Company:</td><td>{{ quote.company }}</td></tr>
-    <tr><td>Email:</td><td>{{ quote.email }}</td></tr>
-    <tr><td>Web Address:</td><td>{{ quote.web }}</td></tr>
-    <tr><td>Job Description:</td><td>{{ quote.description }} </td></tr>
-    <tr><td>Site Status:</td><td>{{ quote.get_sitestatus_display }}</td></tr>
-    <tr><td>Priority:</td><td>{{ quote.get_priority_display }}</td></tr>
-    <tr><td>Submit Date:</td><td>{{ quote.submitted|date:"m-d-y" }}</td></tr>
-    <tr><td>Quote Date:</td><td>{{ quote.quotedate|date:"m-d-y"|default:"pending" }}</td></tr>
-    <tr><td>Quote Price:</td><td>{{ quote.quoteprice|default:"--" }}</td></tr>
-    {% if quote.jobfile %}
-        <tr><td>FILE:</td><td><a href="{{ quote.jobfile.url }}">FILE</a></td></tr>
-    {% endif %}
-</table>
+				</tr>
+                {% for sign in customer.customer_sign.all %}
+                        <tr>
+                            <td><a href="sign/{{ sign.id }}">{{ sign.id }}</a></td>
+                            <td>{{ sign.get_sign_type_display }}</td>
+                            <td>{{ sign.customer }}</td> 
+                            <td>{{ sign.start_date }}</td> 
+                            <td>{{ sign.end_date }}</td>
+                            <td>{{ sign.get_status_display }}</td>
+                            <td><a class="btn btn-outline-primary" href="{% url "quote_update" sign.id %}">Изменить</a></td>
+                            <td><a class="btn btn-outline-primary" href="{% url "quote_delete" sign.id %}">Удалить</a></td>
 
-<br><p>
-<a class="btn btn-outline-primary" href="/detail">Назад к списку</a>
-<a class="btn btn-outline-primary" href="{% url "quote_delete" customer.id %}">Удалить</a>
-<a class="btn btn-outline-primary" href="{% url "quote_update" customer.id %}">Изменить</a>
-</p>
-{% endblock content %}
+                        </tr>
+				{% endfor %}
+			</table>
+		</div>
+	</div>
+</div>
+
+<br><a class="btn btn-primary ml-3" href="/detail">Назад к списку</a>
+{% endblock %}
