fix sign_create response

--- a/dw_root/dw_site/templates/navbar.html
+++ b/dw_root/dw_site/templates/navbar.html
@@ -8,6 +8,7 @@
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
       <a class="nav-item nav-link active" href="/quote/">Новая ЭП<span class="sr-only">(current)</span></a>
+      <a class="nav-item nav-link" href="/quote/detail">Сотрудники</a>
       <a class="nav-item nav-link" href="/quote/detail">Список ЭП</a>
       <a class="nav-item nav-link" href="#">Еще что-нибудь</a>
     </div>
