--- a/dw_root/dw_site/templates/navbar.html
+++ b/dw_root/dw_site/templates/navbar.html
@@ -9,7 +9,7 @@
     <div class="navbar-nav">
       <a class="nav-item nav-link active" href="/quote/">Новая ЭП<span class="sr-only">(current)</span></a>
       <a class="nav-item nav-link" href="/quote/detail">Сотрудники</a>
-      <a class="nav-item nav-link" href="/quote/detail">Список ЭП</a>
+      <a class="nav-item nav-link" href="/sign/list">Список ЭП</a>
       <a class="nav-item nav-link" href="#">Еще что-нибудь</a>
     </div>
   </div>
