--- a/dw_root/dw_site/templates/navbar.html
+++ b/dw_root/dw_site/templates/navbar.html
@@ -1,7 +1,7 @@
 {% load static %}
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="/">Signs</a>
+  <a class="navbar-brand" href="{% url 'sign_list' %}">Signs</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
