--- a/dw_root/quotes/templates/quotes/sign_list.html
+++ b/dw_root/quotes/templates/quotes/sign_list.html
@@ -14,6 +14,8 @@
         <th>Начало действия</th>
         <th>Конец действия</th>
         <th>Подразделение</th>
+        <th></th>
+        <th></th>
     </tr>
     </thead>
     <tbody>
@@ -24,7 +26,9 @@
             <td>{{ sign.get_status_display }}</td> 
             <td>{{ sign.start_date }}</td> 
             <td>{{ sign.end_date }}</td> 
-            <td>{{ sign.customer.get_iogv_display }}</td> 
+            <td>{{ sign.customer.get_iogv_display }}</td>
+            <td><a class="btn btn-outline-warning btn-sm" href="{% url "customer_update" sign.id %}">Изменить</a></td>
+            <td><a class="btn btn-outline-danger btn-sm" href="{% url "quote_delete" sign.id %}">Удалить</a></td> 
         </tr>
     {% endfor %}
     </tbody>
