--- a/dw_root/quotes/templates/quotes/sign_list.html
+++ b/dw_root/quotes/templates/quotes/sign_list.html
@@ -34,6 +34,36 @@
     </tbody>
 </table>
 
+<h1>Осталось 15 дней</h1>
+<table class="table table-sm table-hover">
+    <thead>
+    <tr class="quotehdr">
+        <th>ID</th>
+        <th>Кому выдана</th>
+        <th>Статус</th>
+        <th>Начало действия</th>
+        <th>Конец действия</th>
+        <th>Подразделение</th>
+        <th></th>
+        <th></th>
+    </tr>
+    </thead>
+    <tbody>
+    {% for sign in signs_15days_left %}
+        <tr>
+            <td>{{ sign.id }}</td>
+            <td>{{ sign.customer }}</td>
+            <td>{{ sign.get_status_display }}</td> 
+            <td>{{ sign.start_date }}</td> 
+            <td>{{ sign.end_date }}</td> 
+            <td>{{ sign.customer.get_iogv_display }}</td>
+            <td><a class="btn btn-outline-warning btn-sm" href="{% url "customer_update" sign.id %}">Изменить</a></td>
+            <td><a class="btn btn-outline-danger btn-sm" href="{% url "quote_delete" sign.id %}">Удалить</a></td> 
+        </tr>
+    {% endfor %}
+    </tbody>
+</table>
+
 {% comment %} Отображение активных подписей на страницу
 <table>
 {% for s in signs %}
