--- a/dw_root/quotes/templates/quotes/sign_list.html
+++ b/dw_root/quotes/templates/quotes/sign_list.html
@@ -10,7 +10,6 @@
     <tr class="quotehdr">
         <th>ID</th>
         <th>Кому выдана</th>
-        <th>Статус</th>
         <th>Начало действия</th>
         <th>Конец действия</th>
         <th>Подразделение</th>
@@ -19,11 +18,10 @@
     </tr>
     </thead>
     <tbody>
-    {% for sign in signs %}
+    {% for sign in active_signs %}
         <tr>
             <td>{{ sign.id }}</td>
-            <td>{{ sign.customer }}</td>
-            <td>{{ sign.get_status_display }}</td> 
+            <td>{{ sign.customer }}</td> 
             <td>{{ sign.start_date }}</td> 
             <td>{{ sign.end_date }}</td> 
             <td>{{ sign.customer.get_iogv_display }}</td>
@@ -34,13 +32,12 @@
     </tbody>
 </table>
 
-<h1>Осталось 15 дней</h1>
+<h1>Осталось 15 дней ({{signs_15days_left.count}})</h1>
 <table class="table table-sm table-hover">
     <thead>
     <tr class="quotehdr">
         <th>ID</th>
         <th>Кому выдана</th>
-        <th>Статус</th>
         <th>Начало действия</th>
         <th>Конец действия</th>
         <th>Подразделение</th>
@@ -53,7 +50,6 @@
         <tr>
             <td>{{ sign.id }}</td>
             <td>{{ sign.customer }}</td>
-            <td>{{ sign.get_status_display }}</td> 
             <td>{{ sign.start_date }}</td> 
             <td>{{ sign.end_date }}</td> 
             <td>{{ sign.customer.get_iogv_display }}</td>
@@ -73,6 +69,7 @@
     </tr>
 {% endfor %}
 </table>  {% endcomment %}
+
 
 
 {% endblock content %}
