add status boxes

--- a/dw_root/quotes/templates/quotes/sign_list.html
+++ b/dw_root/quotes/templates/quotes/sign_list.html
@@ -3,6 +3,9 @@
 {% block title %}Список ЭП{% endblock title %}
 
 {% block content %}
+
+{% include 'quotes/status.html' %}
+
 <h1>Список ЭП</h1>
 
 <table class="table table-sm table-hover">
