--- a/dw_root/quotes/templates/quotes/customer_confirm_delete.html
+++ b/dw_root/quotes/templates/quotes/customer_confirm_delete.html
@@ -4,9 +4,9 @@
 
 {% block content %}
 <br>
-<div class="row">
-	<div class="col-md-6">
-		<div class="card card-body">
+<div class="row" >
+	<div class="col-sm-4 mx-auto">
+		<div class="card card-body mb-3 text-center" style="width: 24rem;">
             <form method="POST">
             <p>Вы уверены что хотите удалить пользователя <b>{{ customer }}</b>?</p>
                 <!-- Security token by Django -->
@@ -18,4 +18,5 @@
         </div>
     </div>
 </div>
+
 {% endblock content %}
