--- a/dw_root/quotes/templates/quotes/customer_list.html
+++ b/dw_root/quotes/templates/quotes/customer_list.html
@@ -11,11 +11,10 @@
         <th>ID</th>
         <th>Фамилия</th>
         <th>Имя</th>
+        <th>Отчество</th>
         <th>Должность</th>
         <th>Подразделение</th>
         <th>Учереждение</th>
-        <th>ИНН</th>
-        <th>СНИЛС</th>
         <th>Email</th>
         <th>Рабочий телефон</th>
         <th>Рабочий адрес</th>
@@ -28,11 +27,10 @@
             <td><a href="detail/{{ customer.id }}">{{ customer.id }}</a></td>
             <td><a href="detail/{{ customer.id }}">{{ customer.last_name }}</a></td>
             <td>{{ customer.name }}</td>
+            <td>{{ customer.middle_name }}</td>
             <td>{{ customer.position }}</td> 
             <td>{{ customer.department }}</td> 
-            <td>{{ customer.iogv }}</td> 
-            <td>{{ customer.taxpayer_number|default:"--" }}</td> 
-            <td>{{ customer.snils_number|default:"--" }}</td> 
+            <td>{{ customer.get_iogv_display }}</td> 
             <td>{{ customer.email }}</td> 
             <td>{{ customer.work_phone|default:"--" }}</td>
             <td>{{ customer.address|default:"--" }}</td>
