--- a/dw_root/quotes/templates/quotes/customer_list.html
+++ b/dw_root/quotes/templates/quotes/customer_list.html
@@ -3,7 +3,8 @@
 {% block title %}Список пользователей{% endblock title %}
 
 {% block content %}
-<h1>Список пользователей</h1>
+<h1>Список пользователей   <a class="btn btn-outline-danger btn-sm" href="/quote/">Добавить нового сотрудника</a></h1> 
+
 
 <table class="table table-sm table-hover">
     <thead>
