--- a/dw_root/dw_site/templates/navbar.html
+++ b/dw_root/dw_site/templates/navbar.html
@@ -7,7 +7,7 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
-      <a class="nav-item nav-link active" href="/quote/">Новая ЭП<span class="sr-only">(current)</span></a>
+      <a class="nav-item nav-link active" href="/sign/create/">Новая ЭП<span class="sr-only">(current)</span></a>
       <a class="nav-item nav-link" href="/quote/detail">Сотрудники</a>
       <a class="nav-item nav-link" href="/sign/list">Список ЭП</a>
       <a class="nav-item nav-link" href="#">Еще что-нибудь</a>
