add SignUpdateView + template/ fix gis m2m saved

--- a/dw_root/quotes/templates/quotes/customer_detail.html
+++ b/dw_root/quotes/templates/quotes/customer_detail.html
@@ -52,6 +52,7 @@
 					<th>Кому выдана</th>
 					<th>Дата выдачи</th>
 					<th>Дата окончания</th>
+					<th>№ ГИС</th>
 					<th></th>
 					<th></th>
 
@@ -63,7 +64,8 @@
                             <td>{{ sign.customer }}</td> 
                             <td>{{ sign.start_date }}</td> 
                             <td>{{ sign.end_date }}</td>
-							<td><a class="btn btn-outline-warning btn-sm" href="{% url "customer_update" sign.id %}">Изменить</a></td>
+                            <td>{% for gis in sign.gis_required.all %}{{gis}}</br>{% endfor %}</td>
+							<td><a class="btn btn-outline-warning btn-sm" href="{% url "digitalSign_update" sign.id %}">Изменить</a></td>
 							<td><a class="btn btn-outline-danger btn-sm" href="{% url "customer_update" sign.id %}">Удалить</a></td> 
 
                         </tr>
