--- a/dw_root/quotes/templates/quotes/sign_list.html
+++ b/dw_root/quotes/templates/quotes/sign_list.html
@@ -7,6 +7,19 @@
 {% include 'quotes/status.html' %}
 
 <h1>Список ЭП</h1>
+<div class="row">
+	<div class="col">
+		<div class="card card-body">
+
+			<form method="get">
+				{{filter.form}}
+
+		    <button class="btn btn-primary" type="submit">Search</button>
+		  </form>
+		</div>
+	</div>
+	
+</div>
 
 <table class="table table-sm table-hover">
     <thead>
@@ -21,7 +34,7 @@
     </tr>
     </thead>
     <tbody>
-    {% for sign in active_signs %}
+    {% for sign in filter.qs %}
         <tr>
             <td>{{ sign.id }}</td>
             <td>{{ sign.customer }}</td> 
@@ -62,17 +75,6 @@
     {% endfor %}
     </tbody>
 </table>
-
-{% comment %} Отображение активных подписей на страницу
-<table>
-{% for s in signs %}
-    <tr>
-        <td><a href="detail/{{ s.customer.id }}">{{ s }}</a></td>
-        <td>{{ s.end_date }}</td>
-    </tr>
-{% endfor %}
-</table>  {% endcomment %}
-
 
 
 {% endblock content %}
