add 15days_left page

--- a/dw_root/quotes/templates/quotes/status.html
+++ b/dw_root/quotes/templates/quotes/status.html
@@ -17,7 +17,7 @@
 		<div class="col-md">
 			<div class="card text-center text-black border-warning" id="orders-delivered">
 			  	<div class="card-header">
-			  		<h5 class="card-title">15 дней</h5>
+			  		<h5 class="card-title"><a href='15days_left'>15 дней</a></h5>
 			  	</div>
 			  	<div class="card-body">
 			    	<h3 class="card-title">{{signs_15days_left.count}}</h3>
