create 7 and 30 days left links-page

--- a/dw_root/quotes/templates/quotes/status.html
+++ b/dw_root/quotes/templates/quotes/status.html
@@ -4,7 +4,7 @@
 		<div class="col-md" >
 			<div class="card text-center text-black border-danger" id="total-orders">
 			  	<div class="card-header">
-			  		<h5 class="card-title">Неделя</h5>
+			  		<h5 class="card-title"><a href='7days_left'>Неделя</a></h5>
 			  	</div>
 			  	<div class="card-body">
 			    	<h3 class="card-title">{{signs_7days_left.count}}</h3>
@@ -30,7 +30,7 @@
 		<div class="col-md">
 			<div class="card text-center text-black border-success" id="orders-pending">
 			  	<div class="card-header">
-			  		<h5 class="card-title"><a href='asd'>30 дней</a></h5>
+			  		<h5 class="card-title"><a href='30days_left'>30 дней</a></h5>
 			  	</div>
 			  	<div class="card-body">
 			    	<h3 class="card-title">{{signs_30days_left.count}}</h3>
