--- a/dw_root/quotes/templates/quotes/sign_list.html
+++ b/dw_root/quotes/templates/quotes/sign_list.html
@@ -6,75 +6,160 @@
 
 {% include 'quotes/status.html' %}
 
-<h1>Список ЭП</h1>
+
+<head>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+</head>
+
+<h3>
+<div class="row">
+    <!-- Nav tabs -->
+    <ul class="nav nav-tabs">
+    <li class="nav-item">
+      <a class="nav-link active" data-toggle="tab" href="#sign_list">Список ЭП</a>
+    </li>  
+    <li class="nav-item">
+      <a class="nav-link" data-toggle="tab" href="#menu7">7 дней({{signs_7days_left.count}})</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" data-toggle="tab" href="#menu15">15 дней({{signs_15days_left.count}})</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" data-toggle="tab" href="#menu30">30 дней({{signs_30days_left.count}})</a>
+    </li>
+    </ul>
+</div></h3>
+
 <div class="row">
 	<div class="col">
 		<div class="card card-body">
-
 			<form method="get">
 				{{filter.form}}
-
 		    <button class="btn btn-primary" type="submit">Search</button>
 		  </form>
 		</div>
-	</div>
-	
+	</div>	
 </div>
 
-<table class="table table-sm table-hover">
-    <thead>
-    <tr class="quotehdr">
-        <th>ID</th>
-        <th>Кому выдана</th>
-        <th>Начало действия</th>
-        <th>Конец действия</th>
-        <th>Подразделение</th>
-        <th></th>
-        <th></th>
-    </tr>
-    </thead>
-    <tbody>
-    {% for sign in filter.qs %}
-        <tr>
-            <td>{{ sign.id }}</td>
-            <td>{{ sign.customer }}</td> 
-            <td>{{ sign.start_date }}</td> 
-            <td>{{ sign.end_date }}</td> 
-            <td>{{ sign.customer.get_iogv_display }}</td>
-            <td><a class="btn btn-outline-warning btn-sm" href="{% url "digitalSign_update" sign.id %}">Изменить</a></td>
-            <td><a class="btn btn-outline-danger btn-sm" href="{% url "sign_delete" sign.id %}">Удалить</a></td> 
-        </tr>
-    {% endfor %}
-    </tbody>
-</table>
-
-<h1>Осталось 15 дней ({{signs_15days_left.count}})</h1>
-<table class="table table-sm table-hover">
-    <thead>
-    <tr class="quotehdr">
-        <th>ID</th>
-        <th>Кому выдана</th>
-        <th>Начало действия</th>
-        <th>Конец действия</th>
-        <th>Подразделение</th>
-        <th></th>
-        <th></th>
-    </tr>
-    </thead>
-    <tbody>
-    {% for sign in signs_15days_left %}
-        <tr>
-            <td>{{ sign.id }}</td>
-            <td>{{ sign.customer }}</td>
-            <td>{{ sign.start_date }}</td> 
-            <td>{{ sign.end_date }}</td> 
-            <td>{{ sign.customer.get_iogv_display }}</td>
-            <td><a class="btn btn-outline-warning btn-sm" href="{% url "customer_update" sign.id %}">Изменить</a></td>
-            <td><a class="btn btn-outline-danger btn-sm" href="{% url "customer_update" sign.id %}">Удалить</a></td> 
-        </tr>
-    {% endfor %}
-    </tbody>
-</table>
+<div class="card-body">
+            <div class="tab-content" id="myTabContent">
+                <div class="tab-pane fade show active" id="sign_list">
+                    <table class="table table-sm table-hover">
+                        <thead>
+                        <tr class="quotehdr">
+                            <th>ID</th>
+                            <th>Кому выдана</th>
+                            <th>Начало действия</th>
+                            <th>Конец действия</th>
+                            <th>Подразделение</th>
+                            <th></th>
+                            <th></th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        {% for sign in filter.qs %}
+                            <tr>
+                                <td>{{ sign.id }}</td>
+                                <td>{{ sign.customer }}</td> 
+                                <td>{{ sign.start_date }}</td> 
+                                <td>{{ sign.end_date }}</td> 
+                                <td>{{ sign.customer.get_iogv_display }}</td>
+                                <td><a class="btn btn-outline-warning btn-sm" href="{% url "digitalSign_update" sign.id %}">Изменить</a></td>
+                                <td><a class="btn btn-outline-danger btn-sm" href="{% url "sign_delete" sign.id %}">Удалить</a></td> 
+                            </tr>
+                        {% endfor %}
+                        </tbody>
+                    </table>
+                </div>
+                <div class="tab-pane fade" id="menu15">
+                    <table class="table table-sm table-hover">
+                    <thead>
+                    <tr class="quotehdr">
+                        <th>ID</th>
+                        <th>Кому выдана</th>
+                        <th>Начало действия</th>
+                        <th>Конец действия</th>
+                        <th>Подразделение</th>
+                        <th></th>
+                        <th></th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    {% for sign in signs_15days_left %}
+                        <tr>
+                            <td>{{ sign.id }}</td>
+                            <td>{{ sign.customer }}</td>
+                            <td>{{ sign.start_date }}</td> 
+                            <td>{{ sign.end_date }}</td> 
+                            <td>{{ sign.customer.get_iogv_display }}</td>
+                            <td><a class="btn btn-outline-warning btn-sm" href="{% url "digitalSign_update" sign.id %}">Изменить</a></td>
+                            <td><a class="btn btn-outline-danger btn-sm" href="{% url "sign_delete" sign.id %}">Удалить</a></td> 
+                        </tr>
+                    {% endfor %}
+                    </tbody>
+                    </table>
+                </div>
+                <div class="tab-pane fade" id="menu7">
+                    <table class="table table-sm table-hover">
+                    <thead>
+                    <tr class="quotehdr">
+                        <th>ID</th>
+                        <th>Кому выдана</th>
+                        <th>Начало действия</th>
+                        <th>Конец действия</th>
+                        <th>Подразделение</th>
+                        <th></th>
+                        <th></th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    {% for sign in signs_7days_left %}
+                        <tr>
+                            <td>{{ sign.id }}</td>
+                            <td>{{ sign.customer }}</td>
+                            <td>{{ sign.start_date }}</td> 
+                            <td>{{ sign.end_date }}</td> 
+                            <td>{{ sign.customer.get_iogv_display }}</td>
+                            <td><a class="btn btn-outline-warning btn-sm" href="{% url "digitalSign_update" sign.id %}">Изменить</a></td>
+                            <td><a class="btn btn-outline-danger btn-sm" href="{% url "sign_delete" sign.id %}">Удалить</a></td> 
+                        </tr>
+                    {% endfor %}
+                    </tbody>
+                    </table>
+                </div>
+                <div class="tab-pane fade" id="menu30">
+                    <table class="table table-sm table-hover">
+                    <thead>
+                    <tr class="quotehdr">
+                        <th>ID</th>
+                        <th>Кому выдана</th>
+                        <th>Начало действия</th>
+                        <th>Конец действия</th>
+                        <th>Подразделение</th>
+                        <th></th>
+                        <th></th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    {% for sign in signs_30days_left %}
+                        <tr>
+                            <td>{{ sign.id }}</td>
+                            <td>{{ sign.customer }}</td>
+                            <td>{{ sign.start_date }}</td> 
+                            <td>{{ sign.end_date }}</td> 
+                            <td>{{ sign.customer.get_iogv_display }}</td>
+                            <td><a class="btn btn-outline-warning btn-sm" href="{% url "digitalSign_update" sign.id %}">Изменить</a></td>
+                            <td><a class="btn btn-outline-danger btn-sm" href="{% url "sign_delete" sign.id %}">Удалить</a></td> 
+                        </tr>
+                    {% endfor %}
+                    </tbody>
+                    </table>
+                </div>
+        </div>
+</div>
 
 
 {% endblock content %}
