--- a/dw_root/quotes/templates/quotes/sign_list.html
+++ b/dw_root/quotes/templates/quotes/sign_list.html
@@ -33,7 +33,7 @@
     </ul>
 </div></h3>
 
-<div class="row">
+{% comment %} <div class="row">
 	<div class="col">
 		<div class="card card-body">
 			<form method="get">
@@ -42,7 +42,7 @@
 		  </form>
 		</div>
 	</div>	
-</div>
+</div> {% endcomment %}
 
 <div class="card-body">
             <div class="tab-content" id="myTabContent">
